example/errors/interpret/cannot_cast.box
set x: int = 5;
set y: bool = x as bool;

println(y as str);
